# aniplay

./: README.md  meson.build
aniplay/: main.py  window.py  window.ui~
aniplay/player/: __init__.py  controls.py  pipeline.py
aniplay/servers/: __init__.py
data/: aniplay.gresource.xml  com.github.lucasscvvieira.aniplay.appdata.xml.in  com.github.lucasscvvieira.aniplay.desktop.in  com.github.lucasscvvieira.aniplay.gschema.xml  meson.build
data/ui/: window.ui  window.ui~
flatpak/: com.github.lucasscvvieira.aniplay.json  python3-cloudscraper.json  python3-pysubs2.json
po/: POTFILES  meson.build
